--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 repository = "https://github.com/nzengi/stochastic-abm"
 homepage = "https://github.com/nzengi/stochastic-abm"
 documentation = "https://docs.rs/stochastic-abm"
-keywords = ["stochastic", "finance", "simulation", "mathematics", "brownian motion"]
+keywords = ["stochastic", "finance", "simulation", "mathematics"]
 categories = ["science", "simulation", "mathematics", "finance"]
 
 [dependencies]
